[gd_scene load_steps=7 format=3 uid="uid://dc44vfu6qldjc"]

[ext_resource type="SpriteFrames" uid="uid://br5j16ovov2p6" path="res://assets/sprites/heroes and char/wanderer.tres" id="1_1km75"]
[ext_resource type="Script" path="res://source/elements/battle/char_battle.gd" id="1_u5c7p"]
[ext_resource type="SpriteFrames" uid="uid://bmpohyhj4yaa4" path="res://assets/sprites/effects/battle_char_effect_sprr.tres" id="3_vmud0"]

[sub_resource type="Animation" id="Animation_7xigi"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 24)]
}

[sub_resource type="Animation" id="Animation_g4uss"]
resource_name = "lp_shake"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1),
"transitions": PackedFloat32Array(1, 4.43828, 4.43828, 4.43828, 4.43828, 4.43828, 4.43828, 4.43828, 4.43828, 1),
"update": 0,
"values": [Vector2(0, 24), Vector2(-8, 24), Vector2(0, 24), Vector2(8, 24), Vector2(0, 24), Vector2(-8, 24), Vector2(0, 24), Vector2(8, 24), Vector2(0, 24), Vector2(0, 24)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_83mvc"]
_data = {
"RESET": SubResource("Animation_7xigi"),
"lp_shake": SubResource("Animation_g4uss")
}

[node name="char" type="Node2D"]
script = ExtResource("1_u5c7p")

[node name="AnimEffect" type="AnimationPlayer" parent="."]
root_node = NodePath("../lpLabel")
libraries = {
"": SubResource("AnimationLibrary_83mvc")
}

[node name="spr" type="AnimatedSprite2D" parent="."]
sprite_frames = ExtResource("1_1km75")
animation = &"wanderer"

[node name="AnimSprEffect" type="AnimatedSprite2D" parent="."]
sprite_frames = ExtResource("3_vmud0")
animation = &"impact"
frame = 7
frame_progress = 1.0

[node name="lpLabel" type="Label" parent="."]
offset_top = 24.0
offset_right = 40.0
offset_bottom = 50.0
text = "0/0"
